workshop3/Task1/bggappv1.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bggapp-deploy
  labels:
    name: bggapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggapp-po
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: bggapp-po
      labels:
        name: bggapp-po
    spec:
      containers:
      - name: bggapp-container
        image: stackupiss/bgg-backend:v1
        args:
          - --prefix
          - /v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: bggapp-port
          containerPort: 3000

---
apiVersion: v1 
kind: Service 
metadata:
  name: bggapp-svc1 
  labels:
    name: bggapp-svc1 
spec:
  type: ClusterIP
  selector:
    name: bggapp-po
  ports:
  - port: 8080 
    targetPort: bggapp-port
