workshop3/Task1/bggappv2.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bggapp-deploy2
  labels:
    name: bggapp-deploy2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggapp-po2
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: bggapp-po2
      labels:
        name: bggapp-po2
    spec:
      containers:
      - name: bggapp-container2
        image: stackupiss/bgg-backend:v2
        args:
          - --prefix
          - /v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: bggapp-port
          containerPort: 3000

---
apiVersion: v1 
kind: Service 
metadata:
  name: bggapp-svc2
  labels:
    name: bggapp-svc2 
spec:
  type: ClusterIP
  selector:
    name: bggapp-po2
  ports:
  - port: 8080 
    targetPort: bggapp-port
