workshop3/Task1/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ingress
  namespace: bggns
spec:
  ingressClassName: nginx
  rules:
  - host: bgg.188.166.204.223.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bggapp-svc1
            port:
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: bggapp-svc2
            port:
              number: 8080
